# oxford-rivers-portal-api-py

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
src/: demo.ipynb  demo.py
src/oxrivers_api/: AbstractData.py  DataCache.py  DataOrganizer.py  __init__.py  api_to_json.py  api_to_json_client.py  client.py  data_cache.py  data_models.py  datasets.py  datasets_discovery.py  determinands_discovery.py  endpoints.py  exceptions.py  loader.py  request_models.py  sites.py  sites_discovery.py  storage.py  timeseries_discovery.py
src/oxrivers_api/data_loaders/: abstract_loader.py  json_to_pandas.py  json_to_pandas_loader.py
src/oxrivers_api/errors/: exceptions.py
src/oxrivers_api/models/: data_models.py  request_models.py
src/oxrivers_api/storage/: abstract_storage.py  json_storage.py
tests/: test_client.py  test_datasets_discovery.py  test_determinands_discovery.py  test_loader.py  test_storage.py  test_timeseries_discovery.py
tests/data/datasets/: datasets.json
tests/data/dates/: dates_rainfall_2024-07-31.json
tests/data/determinands/: determinands.json
tests/data/sites/: sites_fft.json
tests/data/timeseries/: timeseries_ea_bathing_water_11946_EC.json  timeseries_ea_wq_sonde_E01612A_fdom.json  timeseries_fft_Oxford.json
