[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxford-rivers-portal-api-py"
version = "0.1.0"
description = "Python client for the Oxford Rivers Portal API"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Jeannie Moulton" }
]
requires-python = ">=3.8"

dependencies = [
  "requests",
  "pandas"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/jeannielynnmoulton/oxford-rivers-portal-api-py"
