[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxford-rivers-portal-api-py"
version = "0.1.6"
description = "Python client for the Oxford Rivers Portal API"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Jeannie Moulton" }
]
requires-python = ">=3.8"

dependencies = [
  "requests>=2.28.0",
  "pandas>=2.0.0",
  "pydantic==2.12.5"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/jeannielynnmoulton/oxford-rivers-portal-api-py"

[tool.setuptools]
packages = ["oxrivers_api", "oxrivers_api.data_loaders", "oxrivers_api.models", "oxrivers_api.errors", "oxrivers_api.storage"]

package-dir = {"" = "src"}
include-package-data = true